  * Move the database code into the jamwiki-core project.
  * All unit tests now use HSQL as a test database, rather than the dummy
    TestDataHandler.
  * Delete the webtest module, reducing the source code size by 12MB.
  * Remove the "export internal database to CSV" functionality - since it
    is now possible to export to XML and migrate databases this capability
    is no longer needed.
  * Upgrade to Spring Framework 3.0.1.RELEASE.
  * Upgrade to Spring Security 3.0.2.RELEASE.
  * Upgrade to Lucene Search 3.0.1.
  * Upgrade to ehcache 1.7.0.
  * Upgrade to commons-pool 1.5.4.
  * Upgrade to JUnit 4.7.
  * Upgrade to HSQLDB 1.8.0.10.

Bugfixes:

  * Leading whitespace should be trimmed from category names such as
    "Category: Test" or "Category : Test".
  * Special:Import and Special:Export code refactored to avoid OOM errors with
    topics that have extensive history.
  * Properly parse template parameters that are themselves templates, such as
    "{{{{{template_name}}}}}" or "{{{1|{{PAGENAME}}}}}".
  * Process interwiki links only if the link does not contain a virtual wiki
    or namespace.  Thus if a wiki has a namespace of "Test" and an interwiki
    of "Test", the link "Test:Topic" will parse as an internal link rather than
    an interwiki link.
  * Trim leading and trailing whitespace during parsing when a template is
    included to fix breakage of wiki table syntax such as "!{{Hl2}}| Word".
  * Named template parameters should also be allowed to be referenced by
    index, for example "name={{{named}}}, index={{{1}}}".
  * The {{SITENAME}} magic word was not fully implemented, and returned
    "SITENAME" instead of the actual site name.
  * Links containing templates or magic words of the form "[[{{PAGENAME}}]]"
    should properly resolve the template/magic word.
  * If a namespace is not case-sensitive (user, template, category) then the
    associated comments namespace should not be case-sensitive either.